# tickets

./: main.py  pyproject.toml
runs/logs/test/: events.out.tfevents.1775176005.DESKTOP-CNAULI2.76660.0
src/tickets/: data.py  train.py  train_old.py
