[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tickets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.2,<3",
  "transformers>=4.40,<5",
  "datasets>=2.18,<3",
  "matplotlib>=3.8,<4",
  "jupyterlab>=4,<5",
  "ipywidgets>=8,<9",
]

#[project.optional-dependencies]
#ev = [
#  "pytest>=8",
#  "ruff>=0.9"
#]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
